[package]
name = "clickhouse-connection-pool"
version = "0.1.5"
description = "A connection pooling library for ClickHouse in Rust, built on top of deadpool."
edition = "2021"
keywords = ["clickhouse", "database", "tokio", "pooling"]
authors = ["Ranger Labs Contributors"]
repository = "https://github.com/ranger-finance/clickhouse-pool"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clickhouse = { version = "0.13.1", features = ["native-tls"]}
deadpool = "0.12.2"

tokio = { version = "1.14.1", features = ["full"] }
futures = "0.3.17"
futures-util = "0.3"

serde = "1.0"
serde_derive = "1.0"
log = { version = "^0.4.21", features = ["kv_serde"] }
prometheus = "0.13"
actix-web-prom = "0.6"
url = "2.5.2"
anyhow = "1.0"
thiserror = "1.0.31"

[dev-dependencies]
uuid = { version="1.6.1", features = ["serde", "v4"] }
actix-web = "4"